dataset1235/2025-2/610742602/users/4180041627/executions/677928262_1626817775.log
== RUN (2025-08-26 20:57:34)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(B,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 6
    A= pi* (R**)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:56:59)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* R**
V= 4/3*pi*R**3


print(round(A,3))
print(round(B,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 6
    A= pi* R**
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:00:05)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**2)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(V,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:59:52)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**2)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(V,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:59:59)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**2)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(V,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:59:11)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**2)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(B,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(B,3))
                ^
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:59:43)
-- CODE: 
from math import *
R= float(input("insira o raio"))



A= pi* (R**2)
V= 4/3*pi*(R**3)


print(round(A,3))
print(round(v,3))
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(v,3))
                ^
NameError: name 'v' is not defined. Did you mean: 'V'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
